Peters staff flow

--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -143,7 +143,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching
+              Time in role
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
@@ -157,7 +157,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill
+              Time with organisation
             </dt>
             <dd class="govuk-summary-list__value">
               Don't know
@@ -171,10 +171,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult types
+              Time in FE
             </dt>
             <dd class="govuk-summary-list__value">
-             Academic teaching
+             Don't know
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -185,10 +185,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult academic
+              Contract type
             </dt>
             <dd class="govuk-summary-list__value">
-             History, Spanish
+             Permanent
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -199,10 +199,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult vocational
+              Paid by
             </dt>
             <dd class="govuk-summary-list__value">
-             Construction
+             Weekly
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -211,6 +211,47 @@
             </dd>
           </div>
 
+ <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Annual salary
+            </dt>
+            <dd class="govuk-summary-list__value">
+             £30,000 - £39,999
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Benefits
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Sickness
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Date stopped
+            </dt>
+            <dd class="govuk-summary-list__value">
+             23/09/2020
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
           
 
 
@@ -221,15 +262,15 @@
         
 
 
-       <!-- <h2 class="govuk-heading-m">Application owner</h2>
+       <h2 class="govuk-heading-m">Qualifications</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Name
+              Highest in Maths
             </dt>
             <dd class="govuk-summary-list__value">
-              Romeo Bridger
+              Degree
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -242,10 +283,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Phone number
+              Highest in English
             </dt>
             <dd class="govuk-summary-list__value">
-              0789 009 8800
+              Don't know
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -257,12 +298,28 @@
           
           
 
-          <div class="govuk-summary-list__row">
+          
+<div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Email
+              Highest academic
             </dt>
             <dd class="govuk-summary-list__value">
-              rbridger@elatt.co.uk
+              A Level Maths
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Highest related
+            </dt>
+            <dd class="govuk-summary-list__value">
+              A Level Maths
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -271,13 +328,67 @@
             </dd>
           </div>
 
-          
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Teaching qualification
+            </dt>
+            <dd class="govuk-summary-list__value">
+              QTS
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Highest teaching
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Unsure
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Currently training
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Yes - Level 3
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Organisation funding
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Yes
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
 
         </dl>
 
 
 
-        <h2 class="govuk-heading-m">Super user</h2>
+        <h2 class="govuk-heading-m">Subjects taught</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -333,7 +444,7 @@
         </dl>
 
 
-        <h2 class="govuk-heading-m">Agreement signatory</h2>
+        <h2 class="govuk-heading-m">Contract</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -387,7 +498,7 @@
 
           
 
-        </dl>-->
+        </dl>
 
 
 
@@ -400,7 +511,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
-      Submit your provider information
+      Submit your staff details
     </a>
 
         </form>
