--- a/app/views/prototypes/peters-staff/hello.html
+++ b/app/views/prototypes/peters-staff/hello.html
@@ -41,7 +41,7 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Time in further education</a>
+        <a class="browse-list-item-link" href="role">Time in further education</a>
         
         
           <p class="browse-list-item-subtext">
