--- a/app/views/prototypes/peters-staff/role.html
+++ b/app/views/prototypes/peters-staff/role.html
@@ -14,8 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <h1 class="govuk-heading-m">John Vincent Adams
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+  <span class="govuk-caption-xl">John Vincent Adams </span>   
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
