--- a/app/views/prototypes/peters-staff/confirmation.html
+++ b/app/views/prototypes/peters-staff/confirmation.html
@@ -26,7 +26,7 @@
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Staff data submitted
+            Staff details submitted
           </h1>
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
