--- a/app/views/prototypes/peters-staff/paid.html
+++ b/app/views/prototypes/peters-staff/paid.html
@@ -11,10 +11,10 @@
 {% block content %}
 
 
-        <div class="govuk-width-container">
+         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
-John Vincent AdamsImpact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
+
+  <span class="govuk-caption-xl">John Vincent Adams </span>  
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
