--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -502,16 +502,16 @@
 
 
 
-<h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
 
-        <p class="govuk-body">By submitting this application you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
 
-        <form action="/form-handler" method="post" novalidate>
+        
+
+        
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
-      Submit your staff details
+          <a href="hello" class="govuk-button show-continue" style="display: inline;">
+      Save
     </a>
 
         </form>
