Peters staff flow

--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -61,7 +61,7 @@
             </dd>
 
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
+              <a class="govuk-link" href="#">
                 <span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
@@ -76,7 +76,7 @@
             </dd>
 
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
+              <a class="govuk-link" href="#">
                 <span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
@@ -91,7 +91,7 @@
             </dd>
 
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
+              <a class="govuk-link" href="#">
                 <span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
@@ -106,7 +106,7 @@
             </dd>
 
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
+              <a class="govuk-link" href="#">
                 <span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
@@ -183,77 +183,6 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Contract type
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Permanent
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Paid by
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Weekly
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
- <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Annual salary
-            </dt>
-            <dd class="govuk-summary-list__value">
-             £30,000 - £39,999
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Benefits
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Sickness
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Date stopped
-            </dt>
-            <dd class="govuk-summary-list__value">
-             23/09/2020
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-          
-
 
         </dl>
 
@@ -290,7 +219,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -308,7 +237,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -323,7 +252,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -337,7 +266,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -351,7 +280,7 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -365,21 +294,22 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
 
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Organisation funding
+              Funding
             </dt>
             <dd class="govuk-summary-list__value">
               Yes
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -447,56 +377,106 @@
         <h2 class="govuk-heading-m">Contract</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+               
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Name
+              Contract type
             </dt>
             <dd class="govuk-summary-list__value">
-              Jane Smith
+             Permanent
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
+                Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
 
-          
-
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Phone number
+              Paid by
             </dt>
             <dd class="govuk-summary-list__value">
-              0789 997 6604
+             Weekly
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
+                Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
 
-          
-          
-
-          <div class="govuk-summary-list__row">
+ <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Email
+              Annual salary
             </dt>
             <dd class="govuk-summary-list__value">
-              jsmith@elatt.co.uk
+             £30,000 - £39,999
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
+                Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
 
-          
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Benefits
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Sickness
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
 
-          
+           <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Start date 
+            </dt>
+            <dd class="govuk-summary-list__value">
+             23/09/2010
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              End date 
+            </dt>
+            <dd class="govuk-summary-list__value">
+             18/06/2020
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Reason for leaving
+            </dt>
+            <dd class="govuk-summary-list__value">
+             New role
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
 
         </dl>
 
