Peters staff flow

--- a/app/views/prototypes/peters-staff/how-long-education.html
+++ b/app/views/prototypes/peters-staff/how-long-education.html
@@ -72,7 +72,7 @@
 <br><br>
 
 
-          <a href="contract" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-john" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
