--- a/app/views/prototypes/peters-staff/staff-two.html
+++ b/app/views/prototypes/peters-staff/staff-two.html
@@ -33,11 +33,11 @@
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
-        <span class="govuk-accordion__section-button" id="accordion-with-summary-sections-heading-1">
-          John Vincent Adams
+        
+         <a class="#" href="complete-john">John Vincent Adams </a>
         </span>
       </h2>
-      <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
+      <!--<div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
         Full time teacher
       </div>
     </div>
@@ -58,8 +58,13 @@
         </li>
         
       </ul>
-    </div>
+    </div>-->
   </div>
+
+
+
+
+
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
@@ -67,7 +72,7 @@
           Julie Anne Angelo
         </span>
       </h2>
-      <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
+     <!-- <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-2">
         Full time teacher
       </div>
     </div>
@@ -87,7 +92,7 @@
         
         
       </ul>
-    </div>
+    </div>-->
   </div>
   
  
