--- a/app/views/prototypes/peters-staff/choose.html
+++ b/app/views/prototypes/peters-staff/choose.html
@@ -14,8 +14,8 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">Impact Training Limited</span>
-
+    <h1 class="govuk-heading-m">Impact Training Limited
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -60,7 +60,7 @@
   </fieldset>
 </div>
 
-</fieldset><br><br>
+</fieldset><br>
 
 
           <a href="mis" class="govuk-button show-continue" style="display: inline;">
