Peters staff flow

--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -490,7 +490,7 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="hello" class="govuk-button show-continue" style="display: inline;">
+          <a href="list-staff" class="govuk-button show-continue" style="display: inline;">
       Save
     </a>
 
