--- a/app/views/prototypes/peters-staff/list.html
+++ b/app/views/prototypes/peters-staff/list.html
@@ -30,59 +30,73 @@
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
-        
+       
         
 
        
-       <ol class="app-task-list">
+        <ol class="app-task-list">
         <li>
-         
+          <h2 class="app-task-list__section">
+            <span class="app-task-list__section-number">1. </span> Staff details
+          </h2>
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#" aria-describedby="eligibility-completed">
-                  Personal details
+                  Personal
+                </a>
+              </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
+            </li>
+
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#" aria-describedby="eligibility-completed">
+                  Time in Further Education
+                </a>
+              </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
+            </li>
+
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#" aria-describedby="eligibility-completed">
+                  Qualicifations
+                </a>
+              </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
+            </li>
+
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#" aria-describedby="eligibility-completed">
+                  Subjects taught
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="role" aria-describedby="read-declaration-completed">
-                  Time in FE
-                </a>
-              </span>
-              
-            </li>
-          
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="company-information-completed">
-                  Qualifications
-                </a>
-              </span>
-             
-            </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="contact-details-completed">
-                  Subjects taught
-                </a>
-              </span>
-             
-            </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#">
+                <a href="#" aria-describedby="read-declaration-completed">
                   Contract
                 </a>
               </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="read-declaration-completed">Completed</strong>
             </li>
-            
           </ul>
         </li>
         <li>
           
+          <h2 class="app-task-list__section">
+            <span class="app-task-list__section-number">2. </span> Submit
+          </h2>
+          <ul class="app-task-list__items">
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#">
+                  Save and submit
+                </a>
+              </span>
             </li>
           </ul>
         </li>
@@ -111,7 +125,10 @@
 </fieldset><br>
 
 
-        
+        <!--  <a href="seven" class="govuk-button show-continue" style="display: inline;">
+      Continue
+    </a>-->
+       
       </div>
     </div>
   </main>
