--- a/app/views/prototypes/peters-staff/list-template.html
+++ b/app/views/prototypes/peters-staff/list-template.html
@@ -30,65 +30,94 @@
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
-        
+       
         
 
        
-       <ol class="app-task-list">
+        <ol class="app-task-list">
         <li>
-         
+          <h2 class="app-task-list__section">
+            <span class="app-task-list__section-number">1. </span> Check before you start
+          </h2>
           <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#" aria-describedby="eligibility-completed">
-                  Personal details
+                  Check eligibility
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="role" aria-describedby="read-declaration-completed">
-                  Time in FE
+                <a href="#" aria-describedby="read-declaration-completed">
+                  Read declaration
                 </a>
               </span>
-              
+              <strong class="govuk-tag app-task-list__task-completed" id="read-declaration-completed">Completed</strong>
             </li>
-          
+          </ul>
+        </li>
+        <li>
+          <h2 class="app-task-list__section">
+            <span class="app-task-list__section-number">2. </span> Prepare application
+          </h2>
+          <ul class="app-task-list__items">
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#" aria-describedby="company-information-completed">
-                  Qualifications
+                  Company information
                 </a>
               </span>
-             
+              <strong class="govuk-tag app-task-list__task-completed" id="company-information-completed">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#" aria-describedby="contact-details-completed">
-                  Subjects taught
+                  Your contact details
                 </a>
               </span>
-             
+              <strong class="govuk-tag app-task-list__task-completed" id="contact-details-completed">Completed</strong>
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#">
-                  Contract
+                  List convictions
                 </a>
               </span>
             </li>
-            
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#">
+                  Provide financial evidence
+                </a>
+              </span>
+            </li>
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#" aria-describedby="medical-information-completed">
+                  Give medical information
+                </a>
+              </span>
+              <strong class="govuk-tag app-task-list__task-completed" id="medical-information-completed">Completed</strong>
+            </li>
           </ul>
         </li>
         <li>
-          
+          <h2 class="app-task-list__section">
+            <span class="app-task-list__section-number">3. </span> Apply
+          </h2>
+          <ul class="app-task-list__items">
+            <li class="app-task-list__item">
+              <span class="app-task-list__task-name">
+                <a href="#">
+                  Submit and pay
+                </a>
+              </span>
             </li>
           </ul>
         </li>
       </ol>
-
-
 
 
         
@@ -111,7 +140,10 @@
 </fieldset><br>
 
 
-        
+        <!--  <a href="seven" class="govuk-button show-continue" style="display: inline;">
+      Continue
+    </a>-->
+       
       </div>
     </div>
   </main>
