Peters staff flow

--- a/app/views/prototypes/peters-staff/add-two.html
+++ b/app/views/prototypes/peters-staff/add-two.html
@@ -269,7 +269,7 @@
   </fieldset><br><br><br>
 
 
-          <a href="list-staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="list-staff-nil" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
