--- a/app/views/prototypes/peters-staff/add.html
+++ b/app/views/prototypes/peters-staff/add.html
@@ -269,7 +269,7 @@
   </fieldset><br><br><br>
 
 
-          <a href="staff-one" class="govuk-button show-continue" style="display: inline;">
+          <a href="staff-zero" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
