--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -191,181 +191,10 @@
         
 
 
-       <h2 class="govuk-heading-m">Qualifications</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Highest in Maths
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Degree
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Highest in English
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Don't know
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          
-<div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Highest academic
-            </dt>
-            <dd class="govuk-summary-list__value">
-              A Level Maths
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Highest related
-            </dt>
-            <dd class="govuk-summary-list__value">
-              A Level Maths
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Teaching qualification
-            </dt>
-            <dd class="govuk-summary-list__value">
-              QTS
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Highest teaching
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Unsure
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Currently training
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - Level 3
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Funding
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-        </dl>
+      
 
 
 
-        <h2 class="govuk-heading-m">Subjects taught</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Name
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Romeo Bridger
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Phone number
-            </dt>
-            <dd class="govuk-summary-list__value">
-              0789 997 6604
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"></span>
-              </a>
-            </dd>
-          </div>
-
-          
-          
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Email
-            </dt>
-            <dd class="govuk-summary-list__value">
-              rbridger@elatt.co.uk
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                <span class="govuk-visually-hidden"> </span>
-              </a>
-            </dd>
-          </div>
 
           
 
@@ -374,110 +203,7 @@
         </dl>
 
 
-        <h2 class="govuk-heading-m">Contract</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-               
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Contract type
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Permanent
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Paid by
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Weekly
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
- <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Annual salary
-            </dt>
-            <dd class="govuk-summary-list__value">
-             £30,000 - £39,999
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Benefits
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Sickness
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-           <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Start date 
-            </dt>
-            <dd class="govuk-summary-list__value">
-             23/09/2010
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              End date 
-            </dt>
-            <dd class="govuk-summary-list__value">
-             18/06/2020
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Reason for leaving
-            </dt>
-            <dd class="govuk-summary-list__value">
-             New role
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
+        
         </dl>
 
 
@@ -491,7 +217,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff" class="govuk-button show-continue" style="display: inline;">
-      Save
+      Continue
     </a>
 
         </form>
