Peters staff flow

--- a/app/views/prototypes/peters-staff/answers-john-one.html
+++ b/app/views/prototypes/peters-staff/answers-john-one.html
@@ -491,7 +491,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff" class="govuk-button show-continue" style="display: inline;">
-      Save
+      Staff list
     </a>
 
         </form>
