--- a/app/views/prototypes/peters-staff/answers-john.html
+++ b/app/views/prototypes/peters-staff/answers-john.html
@@ -217,7 +217,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff" class="govuk-button show-continue" style="display: inline;">
-      Continue
+      Staff list
     </a>
 
         </form>
