--- a/app/views/prototypes/peters-staff/complete-john.html
+++ b/app/views/prototypes/peters-staff/complete-john.html
@@ -73,7 +73,7 @@
             </li>
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="#">
+                <a href="contract">
                   Contract
                 </a>
               </span>
