--- a/app/views/prototypes/peters-staff/date-stop.html
+++ b/app/views/prototypes/peters-staff/date-stop.html
@@ -67,7 +67,7 @@
 <br>
 
 
-          <a href="answers-john" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-john-one" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
