Peters staff flow

--- a/app/views/prototypes/peters-staff/list-staff.html
+++ b/app/views/prototypes/peters-staff/list-staff.html
@@ -74,8 +74,8 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Save
+          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
+      Submit
     </a>
 
         </form>
