--- a/app/views/prototypes/peters-staff/staff-zero.html
+++ b/app/views/prototypes/peters-staff/staff-zero.html
@@ -68,7 +68,7 @@
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Save
+      Submit
     </a>
 
         </form>
