Peters staff flow

--- a/app/views/prototypes/peters-staff/benefits.html
+++ b/app/views/prototypes/peters-staff/benefits.html
@@ -72,7 +72,7 @@
 <br><br>
 
 
-          <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
+          <a href="date" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
