--- a/app/views/prototypes/peters-staff/date.html
+++ b/app/views/prototypes/peters-staff/date.html
@@ -67,7 +67,7 @@
 <br>
 
 
-          <a href="benefits" class="govuk-button show-continue" style="display: inline;">
+          <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
