Peters staff flow

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,6 +73,9 @@
       <p>Peter's staff questions - <a href="/prototypes/peters-staff/start-staff">Start</a>
       </p><br>
 
+      <p>All staff questions in a flow - <a href="/prototypes/all-staff/start-staff">Start</a>
+      </p><br>
+
       <br><br>
 
 
