Peters staff flow

--- a/app/views/prototypes/all-staff/how-long-education.html
+++ b/app/views/prototypes/all-staff/how-long-education.html
@@ -72,7 +72,7 @@
 <br><br>
 
 
-          <a href="answers-john" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-john-two" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
