--- a/app/views/prototypes/all-staff/english.html
+++ b/app/views/prototypes/all-staff/english.html
@@ -114,7 +114,7 @@
 <br><br>
 
 
-          <a href="benefits" class="govuk-button show-continue" style="display: inline;">
+          <a href="subject-type" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
