Peters staff flow

--- a/app/views/prototypes/all-staff/complete-john-four.html
+++ b/app/views/prototypes/all-staff/complete-john-four.html
@@ -99,8 +99,8 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="hello" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="list-staff-john" class="govuk-button show-continue" style="display: inline;">
+      Staff list
     </a>
 
         </form>
