--- a/app/views/prototypes/all-staff/complete-john-three.html
+++ b/app/views/prototypes/all-staff/complete-john-three.html
@@ -98,8 +98,8 @@
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="hello" class="govuk-button show-continue" style="display: inline;">
-      Save
+          <a href="list-staff-john" class="govuk-button show-continue" style="display: inline;">
+      Staff list
     </a>
 
         </form>
