Peters staff flow

--- a/app/views/prototypes/all-staff/funding.html
+++ b/app/views/prototypes/all-staff/funding.html
@@ -26,16 +26,16 @@
     
  <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Do you offer funding for teacher training?
+        Does your organisation offer funding for teacher training?
       </h1>
-    </legend>
+    </legend><br>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Yes - paind in full
+          Yes - in full
         </label>
       </div>
       <div class="govuk-radios__item">
