--- a/app/views/prototypes/all-staff/subject-type.html
+++ b/app/views/prototypes/all-staff/subject-type.html
@@ -23,14 +23,12 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         What type of subjects do they teach?
       </h1>
-    </legend>
-    <span id="waste-hint" class="govuk-hint">
-      Select all that apply.
-    </span>
+    </legend><br>
+    
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
