Peters staff flow

--- a/app/views/prototypes/all-staff/salary.html
+++ b/app/views/prototypes/all-staff/salary.html
@@ -11,16 +11,12 @@
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
+      <a href="#" class="govuk-back-link">Back</a>
 
-  <span class="govuk-caption-xl">John Vincent Adams </span>
+  <span class="govuk-caption-xl">John Vincent Adams </span><br>
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-        
-          <div class="govuk-form-group">
+  <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds-from-desktop">
 
             
 
@@ -31,7 +27,7 @@
       <h1 class="govuk-fieldset__heading">
         What was their gross annual salary?
       </h1>
-    </legend>
+    </legend><br>
     
     <div class="govuk-radios">
 
