--- a/app/views/prototypes/all-staff/answers-john.html
+++ b/app/views/prototypes/all-staff/answers-john.html
@@ -20,13 +20,15 @@
 {% block content %}
 
 
+        <div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+      <a href="#" class="govuk-back-link">Back</a>
         
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
 
   
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds-from-desktop">
+    
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
