--- a/app/views/prototypes/all-staff/john.html
+++ b/app/views/prototypes/all-staff/john.html
@@ -19,7 +19,8 @@
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
+       
+  <div class="govuk-grid-column-two-thirds">
         
           <div class="govuk-form-group">
 
