missing questions in contract

--- a/app/views/prototypes/all-staff/date-stop.html
+++ b/app/views/prototypes/all-staff/date-stop.html
@@ -67,7 +67,7 @@
 <br>
 
 
-          <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
+          <a href="reasons" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
